ecpay 及時間換算的更新